# ChristdevNDICamera

./: local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndi_wrapper.cpp
app/src/main/java/com/cfmapps/networkcamera/: MainActivity.kt  NdiCameraManager.kt
app/src/main/res/drawable/: hud_bg.xml  ic_launcher_foreground.xml  tally_border.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
